# wasd-esolang

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  clean.bat  dev.bat  dist.bat  run.bat
examples/: hello_world.wasd  test.wasd
include/: config.hpp  interpreter.hpp  lexer.hpp
src/: config.cpp  interpreter.cpp  lexer.cpp  main.cpp
wasd-release/: config.json
